deployments/apigateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: apigateway-deployment
spec: 
  
  replicas: 1
  selector: 
    matchLabels: 
      component: apigateway
  template: 
    metadata: 
      labels: 
        component: apigateway
    spec: 
      containers: 
        - 
          image: chukwuemekanweke/ocelotapigateway:latest

          name: ocelotapigateway
          ports: 
            - 
              containerPort: 80
