deployments/basket-pod.yml
apiVersion: v1
kind: Pod
metadata: 
  labels: 
    component: basket
  name: basket-pod
spec: 
  containers: 
    - 
      image: chukwuemeka/basketapi
      name: basketapi
      ports: 
        - containerPort: 80
