deployments/catalog-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: catalog-deployment
spec: 
  
  replicas: 3
  selector: 
    matchLabels: 
      component: catalog
  template: 
    metadata: 
      labels: 
        component: catalog
    spec: 
      containers: 
        - 
          image: chukwuemekanweke/catalogapi:latest
          name: catalogapi
          ports: 
            - 
              containerPort: 80
