deployments/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mongo-deployment
spec: 
  
  replicas: 1
  selector: 
    matchLabels: 
      component: mongo
  template: 
    metadata: 
      labels: 
        component: mongo
    spec: 
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-persistent-volume-claim
      containers: 
        - 
          image: mongo
          name: mongo
          ports: 
            - 
              containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
              #subPath: mongo #to store all the data in the mongo folder. this acts like a parent folder
