deployments/ordering-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: ordering-deployment
spec: 
  
  replicas: 1
  selector: 
    matchLabels: 
      component: ordering
  template: 
    metadata: 
      labels: 
        component: ordering
    spec: 
      containers: 
        - 
          image: chukwuemekanweke/orderingapi:latest
          name: orderingapi
          ports: 
            - 
              containerPort: 80
