deployments/rabbitmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: rabbitmq-deployment
spec: 
  
  replicas: 1
  selector: 
    matchLabels: 
      component: rabbitmq
  template: 
    metadata: 
      labels: 
        component: rabbitmq
    spec: 
      containers: 
        - 
          image: rabbitmq:3-management-alpine
          name: rabbitmq
          ports: 
            - 
              containerPort: 5672
              name: amqp
            -
              containerPort: 15672
              name: dashboard
