deployments/sqlserver-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: sqlserver-deployment
spec: 
  
  replicas: 1
  selector: 
    matchLabels: 
      component: sqlserver
  template: 
    metadata: 
      labels: 
        component: sqlserver
    spec: 
      containers: 
        - 
          image: mcr.microsoft.com/mssql/server
          name: sqlserver
          ports: 
            - 
              containerPort: 1433
