deployments/basket-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: basket-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: basket
  ports:
    - port: 80 #I can decide to use different ports, but really there is no need for that in this service
      targetPort: 80
