deployments/basket-node-port.yml
apiVersion: v1
kind: Service
metadata: 
  name: basket-node-port

spec: 
  ports: 
    - 
      nodePort: 31515
      port: 8001
      targetPort: 80
  type: NodePort
  selector: 
    component: basket
