deployments/mongo-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mongo
  ports:
    - port: 27017 #I can decide to use different ports, but really there is no need for that in this service
      targetPort: 27017
