deployments/ordering-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ordering-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: ordering
  ports:
    - port: 80 #I can decide to use different ports, but really there is no need for that in this service
      targetPort: 80
