deployments/rabbitmq-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: rabbitmq
  ports:
    - port: 5672 #I can decide to use different ports, but really there is no need for that in this service
      targetPort: 5672
      name: amqp
    - port: 15672 #I can decide to use different ports, but really there is no need for that in this service
      targetPort: 15672
      name: dashboard
