deployments/aks-ingress-service.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:     
      - backend:
          serviceName: rabbitmq-cluster-ip-service
          servicePort: 15672
        path: /rabbitdashboard/(.*)
      - backend:
          serviceName: apigateway-cluster-ip-service
          servicePort: 80
        path: /(.*)
